[gd_scene load_steps=17 format=3 uid="uid://f2bxm7cg14yq"]

[ext_resource type="Script" path="res://Player/character_body_2d.gd" id="1_b2ljt"]
[ext_resource type="Texture2D" uid="uid://cwr3r4086n1w" path="res://Watermelon.png" id="2_1y4go"]
[ext_resource type="Resource" uid="uid://b38ynnwxhfxpe" path="res://Player/CharacterResourceFiles/character_data_goth.tres" id="2_h66hh"]
[ext_resource type="Resource" uid="uid://cd7raql42kiv0" path="res://Player/CharacterResourceFiles/character_data_sweet.tres" id="3_p1sie"]
[ext_resource type="Script" path="res://Multiplayer/bullet_spawner.gd" id="3_q0m3g"]
[ext_resource type="Resource" uid="uid://drar62gqsdnby" path="res://Player/CharacterResourceFiles/character_data_vale.tres" id="4_xcgv0"]
[ext_resource type="PackedScene" uid="uid://5k17n100mrgw" path="res://UI/character_animated_sprite.tscn" id="7_7w7dn"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_r7kh5"]
size = Vector2(128, 127)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_wl3r2"]
radius = 25.0
height = 100.0

[sub_resource type="CircleShape2D" id="CircleShape2D_75ctg"]
radius = 5.0

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_cjy5c"]

[sub_resource type="ViewportTexture" id="ViewportTexture_6vtl0"]
viewport_path = NodePath("GDCubismUserModel")

[sub_resource type="Animation" id="Animation_et2e4"]
length = 0.001

[sub_resource type="Animation" id="Animation_4u4gq"]
resource_name = "took_damage"
length = 0.5

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3geqs"]
_data = {
"RESET": SubResource("Animation_et2e4"),
"took_damage": SubResource("Animation_4u4gq")
}

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_vfgy6"]
properties/0/path = NodePath("Label:text")
properties/0/spawn = true
properties/0/replication_mode = 2
properties/1/path = NodePath(".:position")
properties/1/spawn = true
properties/1/replication_mode = 1

[node name="PlayerCharacterBody" type="CharacterBody2D" node_paths=PackedStringArray("_player_collision_area", "_pickup_area", "_revive_collision_area", "_revive_progress_bar", "_on_screen_notifier", "_character_animated_sprite") groups=["player"]]
z_index = 1
position = Vector2(1116, 1072)
collision_layer = 0
collision_mask = 194
script = ExtResource("1_b2ljt")
level_shoot_intervals = [1, 1, 0.8, 0.6, 0.5, 0.4, 0.3]
_character_data = {
"Goth": ExtResource("2_h66hh"),
"Sweet": ExtResource("3_p1sie"),
"Vale": ExtResource("4_xcgv0")
}
_player_collision_area = NodePath("Area2D")
_pickup_area = NodePath("ExpPickupArea2D")
_revive_collision_area = NodePath("ReviveArea2D")
_revive_progress_bar = NodePath("ReviveArea2D/ReviveCollisionShape/ReviveProgressBar")
_on_screen_notifier = NodePath("VisibleOnScreenNotifier2D")
_character_animated_sprite = NodePath("CharacterAnimatedSprite")

[node name="Line2D" type="Line2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_r7kh5")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 38

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 0.5)
shape = SubResource("CapsuleShape2D_wl3r2")

[node name="ExpPickupArea2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4
gravity_point = true
gravity_point_unit_distance = 30.0
gravity_point_center = Vector2(0, 0)
gravity_direction = Vector2(0, 0)
gravity = 100000.0

[node name="ExpPickupCollisionShape" type="CollisionShape2D" parent="ExpPickupArea2D"]
scale = Vector2(50, 50)
shape = SubResource("CircleShape2D_75ctg")

[node name="ReviveArea2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8
gravity_point = true
gravity_point_unit_distance = 30.0
gravity_point_center = Vector2(0, 0)
gravity_direction = Vector2(0, 0)
gravity = 100000.0

[node name="ReviveCollisionShape" type="CollisionShape2D" parent="ReviveArea2D"]
material = SubResource("CanvasItemMaterial_cjy5c")
scale = Vector2(30, 30)
shape = SubResource("CircleShape2D_75ctg")
debug_color = Color(1, 1, 1, 0.42)

[node name="ReviveProgressBar" type="TextureProgressBar" parent="ReviveArea2D/ReviveCollisionShape"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -220.0
offset_top = -220.0
offset_right = 220.0
offset_bottom = 220.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.045, 0.045)
pivot_offset = Vector2(220, 220)
max_value = 1.0
step = 0.01
value = 0.5
fill_mode = 4
texture_under = ExtResource("2_1y4go")
texture_progress = ExtResource("2_1y4go")
tint_under = Color(0.388235, 0.388235, 0.388235, 0.501961)
tint_progress = Color(1, 1, 1, 0.501961)

[node name="CharacterAnimatedSprite" parent="." instance=ExtResource("7_7w7dn")]
scale = Vector2(0.5, 0.5)
texture = SubResource("ViewportTexture_6vtl0")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
scale = Vector2(1.5, 1.5)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_3geqs")
}

[node name="Label" type="Label" parent="."]
offset_left = -107.0
offset_top = -117.0
offset_right = 105.0
offset_bottom = -40.0
text = "Name"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_vfgy6")

[node name="BulletSpawner" type="MultiplayerSpawner" parent="."]
spawn_path = NodePath("..")
script = ExtResource("3_q0m3g")

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_entered" from="ExpPickupArea2D" to="." method="_on_exp_pickup_area_2d_area_entered"]
[connection signal="area_entered" from="ReviveArea2D" to="." method="_on_exp_pickup_area_2d_area_entered"]
